--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <section id="about-us" class="about-us section-size">
             <!-- <h2 class="subtitle">SOBRE NOSOTROS</h2> -->
             <article class="container-about-us container-size">
+                
                 <div class="cont-as-p">
+                    <button class="switch" id="switch" onclick="FbotonOn()">Modo Oscuro</button>
                     <p>Buscamos aportar influencias <span class="color-p">europeas</span> a las costumbres argentinas, enfocandonos en el público mendocino.</p>
                     <p>Abordamos recetas que complementan muy bien nuestra cultura e historia que nos identifican en cualquier parte del mundo.</p>
                     <p>Estamos comprometidos en ofrecer calidez a los clientes, brindando opciones variadas de panadería, pastelería y bollería regional, clásica y de <span class="color-p">vanguardia</span>.</p>
@@ -104,17 +106,17 @@
                 <div class="item-contact">
                     <i class="bx bxs-phone"></i>
                     <p class="par-tittle">TELEFONO</p>
-                    <p class="par-info">(542615120063)</p>
+                    <p class="par-info">(...)</p>
                   </div>
                   <div class="item-contact">
                     <i class="bx bxs-envelope"></i>
                     <p class="par-tittle">EMAIL</p>
-                    <p class="par-info">ca.emmanuel98@gmail.com</p>
+                    <p class="par-info">(...)</p>
                   </div>
                   <div class="item-contact">
                     <i class='bx bxs-home'></i>
                     <p class="par-tittle">UBICACION</p>
-                    <p class="par-info">Argentina, Mendoza, Las Heras</p>
+                    <p class="par-info">Barrio Bombal, Godoy Cruz, Mendoza</p>
                   </div>
                   <div class="item-contact">
                     <i class="bx bx-hash"></i>
@@ -146,7 +148,7 @@
         </section>
     </main>
     <footer>
-        
+        <h3>Trabajo Final - Desarrollador Front End - Potrero Digital</h3>
     </footer>
     <script src="javascript/index.js"></script>
 </body>
